Fix image source path and ensure proper HTML structure
change to local src

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="site-header">
                 <h2>黃俊皓</h2>
                 <a href="https://github.com/sao9623sao?tab=repositories">
-                    <img class="avatar" src="C:\Users\user\Desktop\大頭貼.jpg">
+                    <img class="avatar" src="大頭貼.jpg">
                 </a>
         </header>
         <main class="container">
@@ -42,4 +42,5 @@
             <h4>電話:0962016546</h4>
         </footer>      
     </body>
+
 </html>
